--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,11 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
 
-  discount.grpc:
-    image: ${DOCKER_REGISTRY-}discountgrpc
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
     build:
       context: .
-      dockerfile: Services/Discount/Discount.Grpc/Dockerfile
+      dockerfile: src/Services/Discount/Discount.API/Dockerfile
 
   ordering.api:
     image: ${DOCKER_REGISTRY-}orderingapi
