--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=127.0.0.1,1433;Database=OrderDb;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "FeatureManagement": {
+    "OrderFullfilment": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
