--- a/src/Services/Ordering/Ordering.API/Properties/launchSettings.json
+++ b/src/Services/Ordering/Ordering.API/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5258"
+      "applicationUrl": "http://localhost:5003"
     },
     "https": {
       "commandName": "Project",
@@ -14,7 +14,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7104;http://localhost:5258"
+      "applicationUrl": "http://localhost:5053;http://localhost:5003"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
